petclinic/kubernetes/04-petclinic-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/part-of: petclinic
  namespace: petclinic
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStringTag",
            "name": "spring-petclinic:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: spring-petclinic
        image: ' '
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
