petclinic/kubernetes/05-petclinic-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  labels:
    app: petclinic
  namespace: petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
