petclinic/kubernetes/06-spring-petclinic-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
  name: spring-petclinic
  namespace: petclinic
spec:
  host: petclinic.apps.ocp4-bm.t1.lab.local
  port:
    targetPort: http
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  wildcardPolicy: None
